library-events-producer-v2/library-events-producer-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-events-producer
  labels:
    app: library-events-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-events-producer
      version: v1
  template:
    metadata:
      labels:
        app: library-events-producer
        version: v1
    spec:
      containers:
        - name: library-events-producer
          image: dilipthelip/library-events-producer:v1
          imagePullPolicy: Always      # always pull the latest image on startup
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
